[BACKLOG-9900] - 7.0 Localization for PUC.

--- a/package-res/reportviewer/messages/messages_de.properties
+++ b/package-res/reportviewer/messages/messages_de.properties
@@ -1,5 +1,5 @@
 # messagebundleid is the id of this message bundle - do not localize this
-messagebundleid=reportviewer
+messagebundleid=Reportviewer
 
 # Parameter Toolbar toggle button title
 parameterToolbarItem_title=Berichtparameter
@@ -20,3 +20,30 @@ SessionExpiredComment=Ihre Sitzung ist abgelaufen. Bitte melden Sie sich erneut 
 
 ErrorParsingParamXmlMessage=Fehler beim Analysieren der Parameterinformation.
 FatalErrorTitle=Schwerwiegender Fehler
+
+# Async processing report Activity name
+AsyncComputingLayoutTitle=Layout wird berechnet
+AsyncPrecomputingValuesTitle=Werte werden vorab berechnet
+AsyncPaginatingTitle=Wird paginiert
+AsyncGeneratingContentTitle=Inhalt wird erstellt
+
+ScreenTitle=Bitte warten Sie einen Moment.
+ScreenCancel=Abbrechen
+ErrorPromptTitle=Fehler
+DefaultErrorMessage=Anforderung fehlgeschlagen
+
+# Feedback screen(async processing report)
+FeedbackScreenActivity=Ihr Bericht wird erstellt...
+FeedbackScreenPage=Seite
+FeedbackScreenRow=Zeile
+FeedbackScreenBackground=Im Hintergrund ausf\u00fchren
+
+# Glass pane & Notification screen(async processing report)
+LoadingPage=Seite wird geladen
+Of=von
+
+#Background
+SuccessScheduleTitle=Bericht wird erstellt
+SuccessScheduleText=Ihr Bericht wird erstellt und wird unter {0} verf\u00fcgbar sein, sobald er abgeschlossen ist.
+AutoScheduleTitle=Berichtsgr\u00f6\u00dfengrenze \u00fcberschritten
+AutoScheduleText=M\u00f6chten Sie den Bericht im Hintergrund ausf\u00fchren?
