--- a/src/org/pentaho/reporting/platform/plugin/messages/messages_de.properties
+++ b/src/org/pentaho/reporting/platform/plugin/messages/messages_de.properties
@@ -1,20 +1,20 @@
 #
 # Copyright 2006 Pentaho Corporation.  All rights reserved.
-# This program is free software; you can redistribute it and/or modify it under the
-# terms of the GNU General Public License, version 2 as published by the Free Software
+# This program is free software; you can redistribute it and/or modify it under the 
+# terms of the GNU General Public License, version 2 as published by the Free Software 
 # Foundation.
 #
-# You should have received a copy of the GNU General Public License along with this
-# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html
-# or from the Free Software Foundation, Inc.,
+# You should have received a copy of the GNU General Public License along with this 
+# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html 
+# or from the Free Software Foundation, Inc., 
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 #
-# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 # See the GNU General Public License for more details.
 
 ReportPlugin.executionFailed=[Ausf\u00fchren] Ausf\u00fchrung der Komponente fehlgeschlagen
-ReportPlugin.ReportValidationFailed=Report validation failed.
+ReportPlugin.ReportValidationFailed=Berichtsvalidierung fehlgeschlagen
 ReportPlugin.OutputType=Ausgabetyp
 ReportPlugin.reportDefinitionNotProvided=[Eingabe] Es wurde keine Berichtsdefinition bereitgestellt.
 ReportPlugin.ReportName=Berichtsname
@@ -23,63 +23,64 @@ ReportPlugin.SystemParameters=Systemparameter
 ReportPlugin.ReportSchedulingOptions=Berichtsplanungsoptionen
 ReportPlugin.ScheduleReport=Bericht planen
 ReportPlugin.Subscription=Abonnement
-ReportPlugin.unableToConvertParameter=Unable to convert parameter ''{0}'' from input ''{1}'' to real value.
-ReportPlugin.unableToCreateConnection=Unable to create a connection
-ReportPlugin.noSchemaDefined=No schema file defined.
+ReportPlugin.unableToConvertParameter=Parameter &quot;{0}'' kann nicht von Eingabe ''{1}'' zu tats\u00e4chlichem Wert umgewandelt werden.
+ReportPlugin.unableToCreateConnection=Verbindung kann nicht hergestellt werden
+ReportPlugin.noSchemaDefined=Es wurde keine Schemadatei bestimmt.
 ReportPlugin.noUserSession=[Sitzung] Eine g\u00fcltige Sitzung muss bereitgestellt werden, wenn die Berichtsdefinition als eine Ressource oder \u00fcber einen Pfad gegeben ist.
 ReportPlugin.outputStreamRequired=[Ausgabe] Es wurde kein g\u00fcltiger OutputStream bereitgestellt.
 ReportPlugin.inputParameterRequired=[Eingabe] Die Sammlung von Eingaben wurde nicht bereitgestellt. Dies ist eine schwerwiegender Fehler.
-ReportPlugin.cannotSerializeZipResourceKey=Cannot serialize a ZipResourceKey
-ReportPlugin.cannotDeserializeZipResourceKey=Cannot deserialize a ZipResourceKey
+ReportPlugin.cannotSerializeZipResourceKey=Es kann kein ZipResourceKey serialisiert werden
+ReportPlugin.cannotDeserializeZipResourceKey=Es kann kein ZipResourceKey deserialisiert werden
 ReportPlugin.Destination=E-Mail an
 
-ReportPlugin.logDebugStartBoot=Starting to initialize the reporting engine.
-ReportPlugin.logErrorFatalBootError=Failed to boot the reporting engine. Unexpected Exception occurred.
-ReportPlugin.logErrorGeneralBootError=Failed to boot the reporting engine. Exception occurred during start-up.
-ReportPlugin.logErrorParametrization=Failed to define parameter value.
-ReportPlugin.logStartGenerateContent=About to generate content: mimetype={0}, paginated={1}, page={2}
-ReportPlugin.logEndGenerateContent=Generated content: Content-Size={0}
-ReportPlugin.logErrorGenerateContent=Failed to generated content
-ReportPlugin.logComputedOutputTarget=Output-target as returned by the report: {0}
-ReportPlugin.logErrorMimeTypeFull=Failed to compute the mime-type, will return default.
-ReportPlugin.logErrorMimeTypeShort=Failed to compute the mime-type, will return default: {0}
-ReportPlugin.warnLegacyLockedOutput=Invalid preferred output target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier.
-ReportPlugin.warnInvalidLockedOutput=Invalid preferred output target specified in the report. Type ''{0}'' is neither a valid ReportProcessTask specifier nor a known legacy output-type. Lock-output-type will be ignored.
-ReportPlugin.warnInvalidOutputTarget=Invalid output-target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier. None of the existing output targets can handle this request.
-ReportPlugin.warnLegacyPreferredOutput=Invalid preferred output target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier.
-ReportPlugin.warnInvalidPreferredOutput=Invalid preferred output target specified in the report. Type ''{0}'' is neither a valid ReportProcessTask specifier nor a known legacy output-type. Falling back to ''{1}''
-ReportPlugin.warnInvalidOutputType=Invalid output type specified for the report. Type ''{0}'' is not a known legacy output-type. Defaulting back to ''{1}''
-ReportPlugin.warnDeprecatedPDF=Use of deprecated output-type detected. Please use either 'output-type=application/pdf' or 'output-target=pageable/pdf'.
-ReportPlugin.warnDeprecatedHTML=Use of deprecated output-type detected. Please use either 'output-type=text/html' or one of 'output-target=table/html;page-mode=stream' or 'output-target=table/html;page-mode=page.
-ReportPlugin.warnDeprecatedCSV=Use of deprecated output-type detected. Please use either 'output-type=text/csv' or 'output-target=table/csv;page-mode=stream'.
-ReportPlugin.warnDeprecatedRTF=Use of deprecated output-type detected. Please use either 'output-type=text/rtf' or 'output-target=table/rtf;page-mode=flow'.
-ReportPlugin.warnDeprecatedXLS=Use of deprecated output-type detected. Please use either 'output-type=application/vnd.ms-excel' or 'output-target=table/excel;page-mode=flow'.
-ReportPlugin.errorForeignReportInput=Will not apply inputs to a foreign report.
-ReportPlugin.errorApplyInputsFailed=Unable to apply inputs:
-ReportPlugin.warnUnprocessableRequest=Unable to resolve the output type. This request cannot be processed. output-type={0}
-ReportPlugin.warnNoApplicationContext=Unable to retrieve application context from the Pentaho runtime. baseURL related report-environment properties will not be available.
-ReportPlugin.warnNoSession=Unable to retrieve session context from the Pentaho runtime. Usernames and role information will not be available.
-ReportPlugin.warnNoBaseServerURL=Unable to retrieve base-server url from fully qualified url.
-ReportPlugin.warnNoHostColonPort=Unable to retrieve host and port information from fully qualified url.
-ReportPlugin.errorNonDateParameterValue=Failed to convert date-parameter value. Value is not date at all.
-ReportPlugin.errorNameGeneratorMissingConfiguration=PentahoSystem did not return a valid PentahoNameGenerator implementation. Report processing failed permanently. Fix your configuration.
-ReportPlugin.errorMetadataNotReadable=Unable to read metadata for prpt file.
+ReportPlugin.logDebugStartBoot=Die Initialisierung des Berichterstellungsmoduls wird gestartet.
+ReportPlugin.logErrorFatalBootError=Starten des Berichterstellungsmoduls fehlgeschlagen. Es ist eine unerwartete Ausnahme aufgetreten.
+ReportPlugin.logErrorGeneralBootError=Starten des Berichterstellungsmoduls fehlgeschlagen. Beim Starten ist eine Ausnahme aufgetreten.
+ReportPlugin.logErrorParametrization=Definieren des Parameterwerts fehlgeschlagen.
+ReportPlugin.logStartGenerateContent=Inhalt wird generiert: MIME-Typ={0}, paginiert={1}, Seite={2}
+ReportPlugin.logEndGenerateContent=Generierter Inhalt: Inhaltsgr\u00f6\u00dfe= {0}
+ReportPlugin.logErrorGenerateContent=Generieren des Inhalts fehlgeschlagen
+ReportPlugin.logComputedOutputTarget=Durch den Bericht zur\u00fcckgegebenes Ausgabeziel: {0}
+ReportPlugin.logErrorMimeTypeFull=Berechnung des MIME-Typs fehlgeschlagen, Standard wird zur\u00fcckgegeben.
+ReportPlugin.logErrorMimeTypeShort=Berechnung des MIME-Typs fehlgeschlagen, Standard wird zur\u00fcckgegeben: {0}
+ReportPlugin.warnLegacyLockedOutput=Ung\u00fcltiges bevorzugtes Ausgabeziel in Bericht angegeben. Typ &quot;{0}&quot; ist kein g\u00fctiger Bezeichner f\u00fcr ReportProcessTask
+ReportPlugin.warnInvalidLockedOutput=Ung\u00fcltiges bevorzugtes Ausgabeziel in Bericht angegeben. Typ &quot;{0}&quot; ist weder ein g\u00fctiger Bezeichner f\u00fcr ReportProcessTask noch ein bekannter Legacy-Ausgabetyp. Lock-Output-Typ wird ignoriert.
+ReportPlugin.warnInvalidOutputTarget=Ung\u00fcltiges Ausgabeziel in Bericht angegeben. Typ &quot;{0}&quot; ist kein g\u00fctiger Bezeichner f\u00fcr ReportProcessTask Keines der bestehenden Ausgabeziele kann diese Anforderung verarbeiten.
+ReportPlugin.warnLegacyPreferredOutput=Ung\u00fcltiges bevorzugtes Ausgabeziel in Bericht angegeben. Typ &quot;{0}&quot; ist kein g\u00fctiger Bezeichner f\u00fcr ReportProcessTask
+ReportPlugin.warnInvalidPreferredOutput=Ung\u00fcltiges bevorzugtes Ausgabeziel in Bericht angegeben. Typ &quot;{0}&quot; ist weder ein g\u00fctiger Bezeichner f\u00fcr ReportProcessTask noch ein bekannter Legacy-Ausgabetyp. Zur\u00fcckgreifen auf ''{1}''
+ReportPlugin.warnInvalidOutputType=Ung\u00fcltiger Ausgabetyp f\u00fcr den Bericht angegeben. Typ ''{0}'' ist kein bekannter Legacy-Ausgabetyp. ''{1}'' wird \u00fcbernommen
+ReportPlugin.warnDeprecatedPDF=Verwendung eines veralteten Ausgabetyps entdeckt. Verwenden Sie entweder &quot;output-type=application/pdf&quot; oder &quot;output-target=pageable/pdf&quot;.
+ReportPlugin.warnDeprecatedHTML=Verwendung eines veralteten Ausgabetyps entdeckt. Verwender Sie entweder &quot;output-type=text/html&quot; oder einen der &quot;output-target=table/html;page-mode=stream&quot; oder &quot;output-target=table/html;page-mode=page.
+ReportPlugin.warnDeprecatedCSV=Verwendung eines veralteten Ausgabetyps entdeckt. Verwenden Sie entweder &quot;output-type=text/csv&quot; oder &quot;output-target=table/csv;page-mode=stream&quot;.
+ReportPlugin.warnDeprecatedRTF=Verwendung eines veralteten Ausgabetyps entdeckt. Verwenden Sie entweder &quot;output-type=text/rtf&quot; oder &quot;output-target=table/rtf;page-mode=flow&quot;.
+ReportPlugin.warnDeprecatedXLS=Verwendung eines veralteten Ausgabetyps entdeckt. Verwenden Sie entweder &quot;output-type=application/vnd.ms-excel&quot; oder &quot;output-target=table/excel;page-mode=flow&quot;.
+ReportPlugin.errorForeignReportInput=Eingaben werden nicht f\u00fcr einen fremden Bericht \u00fcbernommen.
+ReportPlugin.errorApplyInputsFailed=Eingaben k\u00f6nnen nicht \u00fcbernommen werden:
+ReportPlugin.warnUnprocessableRequest=Der Ausgabetyp kann nicht aufgel\u00f6st werden. Die Anforderung kann nicht verarbeitet werden. Ausgabetyp= {0}
+ReportPlugin.warnNoApplicationContext=Anwendungskontext kann nicht von der Pentaho-Runtime abgerufen werden. baseURL-zugeh\u00f6rige Berichtsumwelteigenschaften sind nicht verf\u00fcgbar.
+ReportPlugin.warnNoSession=Sitzungskontext kann nicht von der Pentaho-Runtime abgerufen werden. Benutzernamen und Rolleninformationen sind nicht verf\u00fcgbar.
+ReportPlugin.warnNoBaseServerURL=Basisserver-URL kann nicht von vollqualifizierter URL abgerufen werden.
+ReportPlugin.warnNoHostColonPort=Host- und Anschlussinformationen k\u00f6nnen nicht von vollqualifizierter URL abgerufen werden.
+ReportPlugin.errorNonDateParameterValue=Umwandeln des Datumsparameterwerts fehlgeschlagen. Der Wert ist keine Datumsangabe.
+ReportPlugin.errorNameGeneratorMissingConfiguration=PentahoSystem hat keine g\u00fcltige PentahoNameGenerator-Implementierung zur\u00fcckgegeben. Die Berichtsverarbeitung ist dauerhaft fehlgeschlagen. Korrigieren Sie Ihre Konfiguration.
+ReportPlugin.errorMetadataNotReadable=Metadaten f\u00fcr Prpt-Datei k\u00f6nnen nicht gelesen werden.
 
-ReportPlugin.outputHTMLPaginated=HTML (Paginated)
-ReportPlugin.outputHTMLStream=HTML (Single Page)
+ReportPlugin.outputHTMLPaginated=HTML (paginiert)
+ReportPlugin.outputHTMLStream=HTML (einzelne Seite)
 ReportPlugin.outputPDF=PDF
 ReportPlugin.outputXLS=Excel
 ReportPlugin.outputXLSX=Excel 2007
 ReportPlugin.outputRTF=Rich-Text-Format
-ReportPlugin.outputCSV=Comma Separated Value
+ReportPlugin.outputCSV=Kommagetrennter Wert
 ReportPlugin.outputTXT=Text
+ReportPlugin.outputEmail=HTML (E-Mail)
 
-ReportPlugin.debugParameterCannotBeConverted=Failed to convert raw parameter value into a valid report-parameter object: {0}={1}
-ReportPlugin.errorFailedToGenerateParameter="Fehler bei der Generierung der Parameter-XML f\u00fcr "{0}'' mit dem Wert ''{1}''
+ReportPlugin.debugParameterCannotBeConverted=Umwandeln des Rohparameterwerts in ein g\u00fcltiges Berichtsparameterobjekt fehlgeschlagen: {0}={1}
+ReportPlugin.errorFailedToGenerateParameter=&quot;Fehler bei der Generierung der Parameter-XML f\u00fcr &quot;{0}'' mit dem Wert ''{1}''
 ReportPlugin.infoParameterValues=Parameter ''{0}'':  ''{1}'' => ''{2}''.
 ReportPlugin.autoParameter={0}
 ReportPlugin.ContentLinking=Inhaltsverkn\u00fcpfung
 
 # These must be unique
 QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_0=Pentaho {0}
-QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_1=Reporting {0}
+QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_1=Berichterstellung {0}
