--- a/src/org/pentaho/reporting/platform/plugin/messages/messages_fr.properties
+++ b/src/org/pentaho/reporting/platform/plugin/messages/messages_fr.properties
@@ -1,20 +1,20 @@
 #
 # Copyright 2006 Pentaho Corporation.  All rights reserved.
-# This program is free software; you can redistribute it and/or modify it under the
-# terms of the GNU General Public License, version 2 as published by the Free Software
+# This program is free software; you can redistribute it and/or modify it under the 
+# terms of the GNU General Public License, version 2 as published by the Free Software 
 # Foundation.
 #
-# You should have received a copy of the GNU General Public License along with this
-# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html
-# or from the Free Software Foundation, Inc.,
+# You should have received a copy of the GNU General Public License along with this 
+# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html 
+# or from the Free Software Foundation, Inc., 
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 #
-# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 # See the GNU General Public License for more details.
 
 ReportPlugin.executionFailed=[ex\u00e9cuter] \u00c9chec de l'ex\u00e9cution du composant.
-ReportPlugin.ReportValidationFailed=Report validation failed.
+ReportPlugin.ReportValidationFailed=\u00c9chec de validation du rapport.
 ReportPlugin.OutputType=Type de sortie
 ReportPlugin.reportDefinitionNotProvided=[entr\u00e9e] Il manque une d\u00e9finition de rapport.
 ReportPlugin.ReportName=Nom du rapport
@@ -23,63 +23,64 @@ ReportPlugin.SystemParameters=Param\u00e8tres du syst\u00e8me
 ReportPlugin.ReportSchedulingOptions=Options de planification du rapport
 ReportPlugin.ScheduleReport=Planifier le rapport
 ReportPlugin.Subscription=Abonnement
-ReportPlugin.unableToConvertParameter=Unable to convert parameter ''{0}'' from input ''{1}'' to real value.
-ReportPlugin.unableToCreateConnection=Unable to create a connection
-ReportPlugin.noSchemaDefined=No schema file defined.
+ReportPlugin.unableToConvertParameter=Impossible de convertir le param\u00e8tre {0} de l'entr\u00e9e {1} en une v\u00e9ritable valeur.
+ReportPlugin.unableToCreateConnection=Impossible de cr\u00e9er une connexion
+ReportPlugin.noSchemaDefined=Aucun fichier de sch\u00e9ma d\u00e9fini.
 ReportPlugin.noUserSession=[session] Vous devez fournir une session valide si la d\u00e9finition de rapport est indiqu\u00e9e comme ressource ou par chemin.
 ReportPlugin.outputStreamRequired=[sortie] Il manque un flux de sortie valide.
 ReportPlugin.inputParameterRequired=[entr\u00e9e] Il manque l'ensemble des entr\u00e9es. Erreur fatale.
-ReportPlugin.cannotSerializeZipResourceKey=Cannot serialize a ZipResourceKey
-ReportPlugin.cannotDeserializeZipResourceKey=Cannot deserialize a ZipResourceKey
+ReportPlugin.cannotSerializeZipResourceKey=Impossible de s\u00e9rialiser une ZipResourceKey
+ReportPlugin.cannotDeserializeZipResourceKey=Impossible de d\u00e9s\u00e9rialiser une ZipResourceKey
 ReportPlugin.Destination=Destinataire de l'e-mail
 
-ReportPlugin.logDebugStartBoot=Starting to initialize the reporting engine.
-ReportPlugin.logErrorFatalBootError=Failed to boot the reporting engine. Unexpected Exception occurred.
-ReportPlugin.logErrorGeneralBootError=Failed to boot the reporting engine. Exception occurred during start-up.
-ReportPlugin.logErrorParametrization=Failed to define parameter value.
-ReportPlugin.logStartGenerateContent=About to generate content: mimetype={0}, paginated={1}, page={2}
-ReportPlugin.logEndGenerateContent=Generated content: Content-Size={0}
-ReportPlugin.logErrorGenerateContent=Failed to generated content
-ReportPlugin.logComputedOutputTarget=Output-target as returned by the report: {0}
-ReportPlugin.logErrorMimeTypeFull=Failed to compute the mime-type, will return default.
-ReportPlugin.logErrorMimeTypeShort=Failed to compute the mime-type, will return default: {0}
-ReportPlugin.warnLegacyLockedOutput=Invalid preferred output target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier.
-ReportPlugin.warnInvalidLockedOutput=Invalid preferred output target specified in the report. Type ''{0}'' is neither a valid ReportProcessTask specifier nor a known legacy output-type. Lock-output-type will be ignored.
-ReportPlugin.warnInvalidOutputTarget=Invalid output-target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier. None of the existing output targets can handle this request.
-ReportPlugin.warnLegacyPreferredOutput=Invalid preferred output target specified in the report. Type ''{0}'' is not a valid ReportProcessTask specifier.
-ReportPlugin.warnInvalidPreferredOutput=Invalid preferred output target specified in the report. Type ''{0}'' is neither a valid ReportProcessTask specifier nor a known legacy output-type. Falling back to ''{1}''
-ReportPlugin.warnInvalidOutputType=Invalid output type specified for the report. Type ''{0}'' is not a known legacy output-type. Defaulting back to ''{1}''
-ReportPlugin.warnDeprecatedPDF=Use of deprecated output-type detected. Please use either 'output-type=application/pdf' or 'output-target=pageable/pdf'.
-ReportPlugin.warnDeprecatedHTML=Use of deprecated output-type detected. Please use either 'output-type=text/html' or one of 'output-target=table/html;page-mode=stream' or 'output-target=table/html;page-mode=page.
-ReportPlugin.warnDeprecatedCSV=Use of deprecated output-type detected. Please use either 'output-type=text/csv' or 'output-target=table/csv;page-mode=stream'.
-ReportPlugin.warnDeprecatedRTF=Use of deprecated output-type detected. Please use either 'output-type=text/rtf' or 'output-target=table/rtf;page-mode=flow'.
-ReportPlugin.warnDeprecatedXLS=Use of deprecated output-type detected. Please use either 'output-type=application/vnd.ms-excel' or 'output-target=table/excel;page-mode=flow'.
-ReportPlugin.errorForeignReportInput=Will not apply inputs to a foreign report.
-ReportPlugin.errorApplyInputsFailed=Unable to apply inputs:
-ReportPlugin.warnUnprocessableRequest=Unable to resolve the output type. This request cannot be processed. output-type={0}
-ReportPlugin.warnNoApplicationContext=Unable to retrieve application context from the Pentaho runtime. baseURL related report-environment properties will not be available.
-ReportPlugin.warnNoSession=Unable to retrieve session context from the Pentaho runtime. Usernames and role information will not be available.
-ReportPlugin.warnNoBaseServerURL=Unable to retrieve base-server url from fully qualified url.
-ReportPlugin.warnNoHostColonPort=Unable to retrieve host and port information from fully qualified url.
-ReportPlugin.errorNonDateParameterValue=Failed to convert date-parameter value. Value is not date at all.
-ReportPlugin.errorNameGeneratorMissingConfiguration=PentahoSystem did not return a valid PentahoNameGenerator implementation. Report processing failed permanently. Fix your configuration.
-ReportPlugin.errorMetadataNotReadable=Unable to read metadata for prpt file.
+ReportPlugin.logDebugStartBoot=D\u00e9but de l'initialisation du moteur de cr\u00e9ation de rapports.
+ReportPlugin.logErrorFatalBootError=Impossible d'amorcer le moteur de cr\u00e9ation de rapports Une exception inattendue s'est produite.
+ReportPlugin.logErrorGeneralBootError=Impossible d'amorcer le moteur de cr\u00e9ation de rapports Une exception est survenue lors du d\u00e9marrage.
+ReportPlugin.logErrorParametrization=\u00c9chec lors de la d\u00e9finition de la valeur de param\u00e8tre.
+ReportPlugin.logStartGenerateContent=Vous \u00eates sur le point de cr\u00e9er du contenu\u0020: typemime={0}, pagin\u00e9={1}, page={2}
+ReportPlugin.logEndGenerateContent=Contenu g\u00e9n\u00e9r\u00e9\u0020: Taille du contenu={0}
+ReportPlugin.logErrorGenerateContent=\u00c9chec lors de la cr\u00e9ation du contenu.
+ReportPlugin.logComputedOutputTarget=Cible de sortie renvoy\u00e9e par le rapport\u0020:{0}
+ReportPlugin.logErrorMimeTypeFull=\u00c9chec lors du calcul du type mime, retour \u00e0 la valeur par d\u00e9faut.
+ReportPlugin.logErrorMimeTypeShort=\u00c9chec lors du calcul du type mime, retour \u00e0 la valeur par d\u00e9faut\u0020: {0}
+ReportPlugin.warnLegacyLockedOutput=Cible de sortie pr\u00e9f\u00e9r\u00e9e non valide sp\u00e9cifi\u00e9e dans le rapport. Le type \u00ab {0} \u00bb n'est pas un prescripteur ReportProcessTask valide.
+ReportPlugin.warnInvalidLockedOutput=Cible de sortie pr\u00e9f\u00e9r\u00e9e non valide sp\u00e9cifi\u00e9e dans le rapport. Le type \u00ab {0} \u00bb n'est ni un prescripteur ReportProcessTask valide ni un type de sortie existant connu. Le type de sortie de verrouillage sera ignor\u00e9e.
+ReportPlugin.warnInvalidOutputTarget=Cible de sortie sp\u00e9cifi\u00e9e dans le rapport non valide. Le type \u00ab {0} \u00bb n'est pas un prescripteur ReportProcessTask valide. Aucune des cibles de sortie existantes ne peut g\u00e9rer cette requ\u00eate.
+ReportPlugin.warnLegacyPreferredOutput=Cible de sortie pr\u00e9f\u00e9r\u00e9e non valide sp\u00e9cifi\u00e9e dans le rapport. Le type \u00ab {0} \u00bb n'est pas un prescripteur ReportProcessTask valide.
+ReportPlugin.warnInvalidPreferredOutput=Cible de sortie pr\u00e9f\u00e9r\u00e9e non valide sp\u00e9cifi\u00e9e dans le rapport. Le type \u00ab {0} \u00bb n'est ni un prescripteur ReportProcessTask valide ni un type de sortie existant connu. Retour \u00e0 \u00ab {1} \u00bb
+ReportPlugin.warnInvalidOutputType=Type de sortie sp\u00e9cifi\u00e9 pour le rapport non valide. \u00ab {0} \u00bb n'est pas un type de sortie existant connu. Retour \u00e0 la valeur par d\u00e9faut \u00ab {1} \u00bb
+ReportPlugin.warnDeprecatedPDF=L'utilisation d'un type de sortie d\u00e9conseill\u00e9 a \u00e9t\u00e9 d\u00e9tect\u00e9e. Veuillez utiliser 'output-type=application/pdf' ou 'output-target=pageable/pdf'.
+ReportPlugin.warnDeprecatedHTML=L'utilisation d'un type de sortie d\u00e9conseill\u00e9 a \u00e9t\u00e9 d\u00e9tect\u00e9e. Veuillez utiliser 'output-type=text/html' ou 'output-target=table/html;page-mode=stream' ou 'output-target=table/html;page-mode=page.
+ReportPlugin.warnDeprecatedCSV=L'utilisation d'un type de sortie d\u00e9conseill\u00e9 a \u00e9t\u00e9 d\u00e9tect\u00e9e. Veuillez utiliser 'output-type=text/csv' ou 'output-target=table/csv;page-mode=stream'.
+ReportPlugin.warnDeprecatedRTF=L'utilisation d'un type de sortie d\u00e9conseill\u00e9 a \u00e9t\u00e9 d\u00e9tect\u00e9e. Veuillez utiliser 'output-type=text/rtf' ou 'output-target=table/rtf;page-mode=flow'.
+ReportPlugin.warnDeprecatedXLS=L'utilisation d'un type de sortie d\u00e9conseill\u00e9 a \u00e9t\u00e9 d\u00e9tect\u00e9e. Veuillez utiliser 'output-type=application/vnd.ms-excel' ou 'output-target=table/excel;page-mode=flow'.
+ReportPlugin.errorForeignReportInput=Les entr\u00e9es ne seront pas appliqu\u00e9es \u00e0 un rapport \u00e9tranger.
+ReportPlugin.errorApplyInputsFailed=Impossible d'appliquer les entr\u00e9es\u0020:
+ReportPlugin.warnUnprocessableRequest=Impossible de r\u00e9soudre le type de sortie. Cette requ\u00eate ne peut pas \u00eatre trait\u00e9e. output-type={0}
+ReportPlugin.warnNoApplicationContext=Impossible de r\u00e9cup\u00e9rer le contexte d'application \u00e0 partir de l'ex\u00e9cution de Pentaho. Les propri\u00e9t\u00e9s de l'environnement de rapport li\u00e9 \u00e0 l'URL de base ne seront pas disponibles.
+ReportPlugin.warnNoSession=Impossible de r\u00e9cup\u00e9rer le contexte de session \u00e0 partir de l'ex\u00e9cution de Pentaho. Les informations de noms d'utilisateur et r\u00f4le ne sont pas disponibles.
+ReportPlugin.warnNoBaseServerURL=Impossible de r\u00e9cup\u00e9rer l'url du serveur de base \u00e0 partir de l'url compl\u00e8te.
+ReportPlugin.warnNoHostColonPort=Impossible de r\u00e9cup\u00e9rer les informations sur l'h\u00f4te et le port \u00e0 partir d'une url compl\u00e8te.
+ReportPlugin.errorNonDateParameterValue=\u00c9chec lors de la conversion de la valeur du param\u00e8tre de date. La valeur ne correspond pas \u00e0 une date.
+ReportPlugin.errorNameGeneratorMissingConfiguration=PentahoSystem n'a pas renvoy\u00e9 d'impl\u00e9mentation PentahoNameGenerator valide. \u00c9chec permanent du traitement du rapport. R\u00e9parer votre configuration
+ReportPlugin.errorMetadataNotReadable=Impossible de lire les m\u00e9tadonn\u00e9es du fichier prpt.
 
-ReportPlugin.outputHTMLPaginated=HTML (Paginated)
-ReportPlugin.outputHTMLStream=HTML (Single Page)
+ReportPlugin.outputHTMLPaginated=HTML (pagin\u00e9)
+ReportPlugin.outputHTMLStream=HTML (une seule page)
 ReportPlugin.outputPDF=PDF
 ReportPlugin.outputXLS=Excel
 ReportPlugin.outputXLSX=Excel 2007
-ReportPlugin.outputRTF=Rich-Text-Format
-ReportPlugin.outputCSV=Comma Separated Value
+ReportPlugin.outputRTF=Format RTF
+ReportPlugin.outputCSV=Valeur s\u00e9par\u00e9e par une virgule
 ReportPlugin.outputTXT=Texte
+ReportPlugin.outputEmail=HTML (e-mail)
 
-ReportPlugin.debugParameterCannotBeConverted=Failed to convert raw parameter value into a valid report-parameter object: {0}={1}
-ReportPlugin.errorFailedToGenerateParameter=\u00ab\u0020Une panne est survenue lors de la cr\u00e9ation du param\u00e8tre xml pour \u00ab\u0020{0}\u0020\u00bb avec la valeur \u00ab\u0020{1}\u0020\u00bb
-ReportPlugin.infoParameterValues=Parameter ''{0}'':  ''{1}'' => ''{2}''.
+ReportPlugin.debugParameterCannotBeConverted=\u00c9chec lors de la conversion de la valeur du param\u00e8tre brut en un objet de param\u00e8tre de rapport valide\u0020: {0}={1}
+ReportPlugin.errorFailedToGenerateParameter=\u00ab Une panne est survenue lors de la cr\u00e9ation du param\u00e8tre xml pour \u00ab {0} \u00bb avec la valeur \u00ab {1} \u00bb
+ReportPlugin.infoParameterValues=Param\u00e8tre \u00ab {0} \u00bb\u0020: \u00ab {1} \u00bb => \u00ab {2} \u00bb.
 ReportPlugin.autoParameter={0}
 ReportPlugin.ContentLinking=Lien du contenu
 
 # These must be unique
 QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_0=Pentaho {0}
-QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_1=Reporting {0}
+QuerylessTableModel.DEFAULT_STRING_VALUE_ROW_1=Cr\u00e9ation de rapports {0}
