--- a/src/org/pentaho/reporting/platform/plugin/messages/messages_ja.properties
+++ b/src/org/pentaho/reporting/platform/plugin/messages/messages_ja.properties
@@ -1,37 +1,37 @@
 #
 # Copyright 2006 Pentaho Corporation.  All rights reserved.
-# This program is free software; you can redistribute it and/or modify it under the
-# terms of the GNU General Public License, version 2 as published by the Free Software
+# This program is free software; you can redistribute it and/or modify it under the 
+# terms of the GNU General Public License, version 2 as published by the Free Software 
 # Foundation.
 #
-# You should have received a copy of the GNU General Public License along with this
-# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html
-# or from the Free Software Foundation, Inc.,
+# You should have received a copy of the GNU General Public License along with this 
+# program; if not, you can obtain a copy at http://www.gnu.org/licenses/gpl-2.0.html 
+# or from the Free Software Foundation, Inc., 
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 #
-# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 # See the GNU General Public License for more details.
 
-ReportPlugin.executionFailed=[\u5b9f\u884c] \u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u5b9f\u884c\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
+ReportPlugin.executionFailed=[execute] Component execution failed.
 ReportPlugin.ReportValidationFailed=Report validation failed.
 ReportPlugin.OutputType=\u51fa\u529b\u30bf\u30a4\u30d7
-ReportPlugin.reportDefinitionNotProvided=[\u5165\u529b] \u30ec\u30dd\u30fc\u30c8\u5b9a\u7fa9\u304c\u63d0\u4f9b\u3055\u308c\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+ReportPlugin.reportDefinitionNotProvided=[input] A report-definition was not provided.
 ReportPlugin.ReportName=\u30ec\u30dd\u30fc\u30c8\u540d
-ReportPlugin.ReportParameters=\u30ec\u30dd\u30fc\u30c8 \u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
-ReportPlugin.SystemParameters=\u30b7\u30b9\u30c6\u30e0 \u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
-ReportPlugin.ReportSchedulingOptions=\u30ec\u30dd\u30fc\u30c8 \u30b9\u30b1\u30b8\u30e5\u30fc\u30ea\u30f3\u30b0 \u30aa\u30d7\u30b7\u30e7\u30f3
-ReportPlugin.ScheduleReport=\u30ec\u30dd\u30fc\u30c8\u306e\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
-ReportPlugin.Subscription=\u914d\u4fe1
+ReportPlugin.ReportParameters=\u30ec\u30dd\u30fc\u30c8\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
+ReportPlugin.SystemParameters=\u30b7\u30b9\u30c6\u30e0\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
+ReportPlugin.ReportSchedulingOptions=\u30ec\u30dd\u30fc\u30c8\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u30aa\u30d7\u30b7\u30e7\u30f3
+ReportPlugin.ScheduleReport=\u30ec\u30dd\u30fc\u30c8\u3092\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
+ReportPlugin.Subscription=\u30b5\u30d6\u30b9\u30af\u30ea\u30d7\u30b7\u30e7\u30f3
 ReportPlugin.unableToConvertParameter=Unable to convert parameter ''{0}'' from input ''{1}'' to real value.
 ReportPlugin.unableToCreateConnection=Unable to create a connection
 ReportPlugin.noSchemaDefined=No schema file defined.
-ReportPlugin.noUserSession=[\u30bb\u30c3\u30b7\u30e7\u30f3] \u30ec\u30dd\u30fc\u30c8\u5b9a\u7fa9\u304c\u30ea\u30bd\u30fc\u30b9\u3068\u3057\u3066\u3001\u307e\u305f\u306f\u30d1\u30b9\u306b\u3088\u3063\u3066\u63d0\u4f9b\u3055\u308c\u308b\u5834\u5408\u3001\u6709\u52b9\u306a\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u63d0\u4f9b\u3055\u308c\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
-ReportPlugin.outputStreamRequired=[\u51fa\u529b] \u6709\u52b9\u306a OutputStream \u304c\u63d0\u4f9b\u3055\u308c\u307e\u305b\u3093\u3067\u3057\u305f\u3002
-ReportPlugin.inputParameterRequired=[\u5165\u529b] \u5165\u529b\u30b3\u30ec\u30af\u30b7\u30e7\u30f3\u304c\u63d0\u4f9b\u3055\u308c\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u3053\u308c\u306f\u81f4\u547d\u7684\u306a\u30a8\u30e9\u30fc\u3067\u3059\u3002
+ReportPlugin.noUserSession=[session] A valid session must be provided if the report-definition is given as a resource or by path.
+ReportPlugin.outputStreamRequired=[output] A valid OutputStream was not provided.
+ReportPlugin.inputParameterRequired=[input] The collection of inputs was not provided. This is a fatal error.
 ReportPlugin.cannotSerializeZipResourceKey=Cannot serialize a ZipResourceKey
 ReportPlugin.cannotDeserializeZipResourceKey=Cannot deserialize a ZipResourceKey
-ReportPlugin.Destination=\u96fb\u5b50\u30e1\u30fc\u30eb\u9001\u4fe1\u5148
+ReportPlugin.Destination=E-Mail To
 
 ReportPlugin.logDebugStartBoot=Starting to initialize the reporting engine.
 ReportPlugin.logErrorFatalBootError=Failed to boot the reporting engine. Unexpected Exception occurred.
@@ -73,9 +73,10 @@ ReportPlugin.outputXLSX=Excel 2007
 ReportPlugin.outputRTF=Rich-Text-Format
 ReportPlugin.outputCSV=Comma Separated Value
 ReportPlugin.outputTXT=\u30c6\u30ad\u30b9\u30c8
+ReportPlugin.outputEmail=HTML (\u30e1\u30fc\u30eb)
 
 ReportPlugin.debugParameterCannotBeConverted=Failed to convert raw parameter value into a valid report-parameter object: {0}={1}
-ReportPlugin.errorFailedToGenerateParameter="\u5024 "{1}" \u3067 "{0}" \u7528\u306e\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc XML \u3092\u751f\u6210\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
+ReportPlugin.errorFailedToGenerateParameter=&quot;Failure while generating parameter-xml for ''{0}'' with value ''{1}''
 ReportPlugin.infoParameterValues=Parameter ''{0}'':  ''{1}'' => ''{2}''.
 ReportPlugin.autoParameter={0}
 ReportPlugin.ContentLinking=\u30b3\u30f3\u30c6\u30f3\u30c4\u30ea\u30f3\u30af
