--- a/package-res/reportviewer/messages/messages_fr.properties
+++ b/package-res/reportviewer/messages/messages_fr.properties
@@ -20,3 +20,30 @@ SessionExpiredComment=Votre session a expir\u00e9. Veuillez actualiser cette pag
 
 ErrorParsingParamXmlMessage=Erreur d'analyse des informations de param\u00e8tre.
 FatalErrorTitle=Erreur fatale
+
+# Async processing report Activity name
+AsyncComputingLayoutTitle=Calcul de la mise en page
+AsyncPrecomputingValuesTitle=Pr\u00e9calcul des valeurs
+AsyncPaginatingTitle=Pagination
+AsyncGeneratingContentTitle=G\u00e9n\u00e9ration du contenu
+
+ScreenTitle=Un moment, s'il vous pla\u00eet.
+ScreenCancel=Annuler
+ErrorPromptTitle=Erreur
+DefaultErrorMessage=\u00c9chec de la requ\u00eate
+
+# Feedback screen(async processing report)
+FeedbackScreenActivity=Nous g\u00e9n\u00e9rons votre rapport...
+FeedbackScreenPage=Page
+FeedbackScreenRow=Ligne
+FeedbackScreenBackground=Ex\u00e9cuter en arri\u00e8re-plan
+
+# Glass pane & Notification screen(async processing report)
+LoadingPage=Chargement de la page
+Of=de
+
+#Background
+SuccessScheduleTitle=G\u00e9n\u00e9ration du rapport
+SuccessScheduleText=Votre rapport est en cours de g\u00e9n\u00e9ration et sera disponible \u00e0 {0} une fois pr\u00eat.
+AutoScheduleTitle=Taille maximal du rapport d\u00e9pass\u00e9e
+AutoScheduleText=Voulez-vous ex\u00e9cuter le rapport en arri\u00e8re-plan\u0020?
