--- a/package-res/reportviewer/messages/messages_ja.properties
+++ b/package-res/reportviewer/messages/messages_ja.properties
@@ -2,7 +2,7 @@
 messagebundleid=reportviewer
 
 # Parameter Toolbar toggle button title
-parameterToolbarItem_title=\u30ec\u30dd\u30fc\u30c8 \u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
+parameterToolbarItem_title=\u30ec\u30dd\u30fc\u30c8\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc
 
 # Submit panel component labels
 scheduleButtonLabel=\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
@@ -15,8 +15,35 @@ PageControlNextPage_title=\u6b21\u30da\u30fc\u30b8
 PageControlPreviousPage_title=\u524d\u30da\u30fc\u30b8
 
 # Session expiration message
-SessionExpired=\u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u671f\u9650\u5207\u308c
-SessionExpiredComment=\u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u671f\u9650\u304c\u5207\u308c\u307e\u3057\u305f\u3002\u518d\u30ed\u30b0\u30a4\u30f3\u5f8c\u3001\u3053\u306e\u30da\u30fc\u30b8\u3092\u518d\u8aad\u307f\u8fbc\u307f\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+SessionExpired=\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u5207\u308c\u307e\u3057\u305f
+SessionExpiredComment=\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u5207\u308c\u307e\u3057\u305f\u3002\u30da\u30fc\u30b8\u3092\u30ea\u30ed\u30fc\u30c9\u3057\u3001\u518d\u5ea6\u30ed\u30b0\u30a4\u30f3\u3092\u884c\u3063\u3066\u304f\u3060\u3055\u3044\u3002
 
-ErrorParsingParamXmlMessage=\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc\u60c5\u5831\u306e\u89e3\u6790\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
+ErrorParsingParamXmlMessage=\u30d1\u30e9\u30e1\u30fc\u30bf\u60c5\u5831\u306e\u30d1\u30fc\u30b9\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
 FatalErrorTitle=\u81f4\u547d\u7684\u306a\u30a8\u30e9\u30fc
+
+# Async processing report Activity name
+AsyncComputingLayoutTitle=\u30ec\u30a4\u30a2\u30a6\u30c8\u3092\u8a08\u7b97\u4e2d
+AsyncPrecomputingValuesTitle=\u5024\u3092\u4e8b\u524d\u8a08\u7b97\u4e2d
+AsyncPaginatingTitle=\u30da\u30fc\u30b8\u30f3\u30b0\u4e2d
+AsyncGeneratingContentTitle=\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u751f\u6210\u4e2d
+
+ScreenTitle=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044
+ScreenCancel=\u30ad\u30e3\u30f3\u30bb\u30eb
+ErrorPromptTitle=\u30a8\u30e9\u30fc
+DefaultErrorMessage=\u30ea\u30af\u30a8\u30b9\u30c8\u306f\u5931\u6557\u3057\u307e\u3057\u305f\u3002
+
+# Feedback screen(async processing report)
+FeedbackScreenActivity=\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u3057\u3066\u3044\u307e\u3059...
+FeedbackScreenPage=\u30da\u30fc\u30b8
+FeedbackScreenRow=\u30af\u30ed\u30b9\u30bf\u30d6\u884c\u30b0\u30eb\u30fc\u30d7
+FeedbackScreenBackground=\u30d0\u30c3\u30af\u30b0\u30e9\u30a6\u30f3\u30c9\u3067\u5b9f\u884c
+
+# Glass pane & Notification screen(async processing report)
+LoadingPage=\u8aad\u307f\u8fbc\u307f\u4e2d - \u30da\u30fc\u30b8
+Of=/
+
+#Background
+SuccessScheduleTitle=\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u4e2d
+SuccessScheduleText=\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u4e2d\u3067\u3059\u3002\u751f\u6210\u3067\u304d\u305f\u3089{0}\u3067\u5229\u7528\u3067\u304d\u307e\u3059\u3002
+AutoScheduleTitle=\u30ec\u30dd\u30fc\u30c8\u306e\u30b5\u30a4\u30ba\u5236\u9650\u3092\u8d85\u3048\u307e\u3057\u305f
+AutoScheduleText=\u30ec\u30dd\u30fc\u30c8\u3092\u30d0\u30c3\u30af\u30b0\u30e9\u30a6\u30f3\u30c9\u3067\u5b9f\u884c\u3057\u307e\u3059\u304b?
